add new website from server na

--- a/xem-phim-moi/joshua-thieu-nien-chong-lai-sieu-cuong/index.html
+++ b/xem-phim-moi/joshua-thieu-nien-chong-lai-sieu-cuong/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             3
             </dd>
             <br/>
            </dl>
@@ -1544,7 +1544,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1566,7 +1566,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1588,29 +1588,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1632,7 +1610,29 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1653,18 +1653,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-vo-doi-dau-chang-re" title="Bố Vợ Đối Đầu Chàng Rể">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-lac-buoc" title="Linh Hồn Lạc Bước">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-vo-doi-dau-chang-re-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-lac-buoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bố Vợ Đối Đầu Chàng Rể
+             Linh Hồn Lạc Bước
             </span>
             <span class="list-top-movie-item-en">
-             Why Him?
+             Pang Sanaeha
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1675,18 +1675,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/manh-moi-cuoi-cung" title="Manh Mối Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-thunderman-phan-1" title="Gia đình Thunderman (Phần 1)">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/manh-moi-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-thunderman-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Manh Mối Cuối Cùng
+             Gia đình Thunderman (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Criticsized
+             The Thundermans (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-nho-cua-dai-ca-nunu" title="Phi vụ nhỏ của Đại ca Nunu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-nho-cua-dai-ca-nunu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phi vụ nhỏ của Đại ca Nunu
+            </span>
+            <span class="list-top-movie-item-en">
+             Big Nunu's Little Heist
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1697,21 +1719,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/reacher-phan-1" title="Reacher (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-xuan-tu-tao-vi" title="Thanh Xuân Tu Tảo Vi">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/reacher-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-xuan-tu-tao-vi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Reacher (Phần 1)
+             Thanh Xuân Tu Tảo Vi
             </span>
             <span class="list-top-movie-item-en">
-             Reacher (Season 1)
+             Youth Should Be Early
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1719,40 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhi-karate" title="Siêu Nhí Karate">
+          <a class="list-top-movie-link" href="/phim-moi/nan-doi-nam-1942" title="Nạn đói năm 1942">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhi-karate-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nan-doi-nam-1942-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Nhí Karate
+             Nạn đói năm 1942
             </span>
             <span class="list-top-movie-item-en">
-             The Karate Kid
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vengeance-of-an-assassin" title="Vengeance of an Assassin">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vengeance-of-an-assassin-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vengeance of an Assassin
-            </span>
-            <span class="list-top-movie-item-en">
-             Sát Thủ Báo Thù
+             Back to 1942
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
